# component-gui

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Events.md  KnownIssuesAndFutureFeatures.md  README.md  build.rs  format_lib.py
.github/workflows/: cmake-multi-platform.yml
c++-src/: CMakeLists.txt
c++-src/inc/cgui/: auto_ref.hpp  build_utility.hpp  cgui-call.hpp  cgui-types.hpp  cgui.hpp  dynamic.hpp  fonts.hpp  ft_fonts.hpp  geometry.hpp  sdl.hpp  stl_extend.hpp  ui_events.hpp  warnings.hpp  widget_algorithm.hpp
c++-src/inc/cgui/std-backport/: algorithm.hpp  array.hpp  concepts.hpp  expected.hpp  functional.hpp  limits.hpp  math.hpp  ranges.hpp  tuple.hpp  type_traits.hpp  utility.hpp
c++-src/src/: cgui.cpp
cmake/: embeddBinary.cmake  embedded.cpp.in  embedded.hpp.in  findDoocNP.cmake  findFmt.cmake  findFreeType.cmake  findGTest.cmake  findGoogleFonts.cmake  findSDL.cmake
examples/c++/: CMakeLists.txt  dynamic_list.cpp  hello-world.cpp
examples/rust/: hello-world.rs
rust-src/: cgui.rs
tests/: CMakeLists.txt  cgui-bp-tests.cpp  cgui-events-tests.cpp  cgui-events.cpp  cgui-geometry-tests.cpp  cgui-subable-tests.cpp  cgui-tests.cpp  cgui-textrender-tests.cpp  cgui-ui-events-tests.cpp  cgui-widget-tests.cpp  cgui_test_utils.hpp
